[feature/popular-articles]: [SSR] [Fix] prevent comment overflow

--- a/src/express/static/css/custom.css
+++ b/src/express/static/css/custom.css
@@ -268,6 +268,8 @@
 .last-comment__text {
   display: block;
   margin-top: 8px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .last-comment__text:hover {
